# verse-calculus-verso

./: Cargo.toml  README.md
src/: ast.rs  lib.rs  main.rs
src/core/: context.rs  mod.rs  subst.rs
src/rewrite/: application.rs  choice.rs  elimination.rs  mod.rs  normalization.rs  unification.rs
src/syntax/: mod.rs  parser.rs  pretty.rs
tests/: application_test.rs  choice_test.rs  context_test.rs  elimination_test.rs  end_to_end_test.rs  normalization_test.rs  parser_test.rs  subst_test.rs  unification_test.rs
